--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,11 @@ body {
         grid-template-columns: 1fr;
         text-align: center;
     }
+
+    .social-links {
+        justify-content: center !important;
+        text-align: center !important;
+    }
 }
 
 @media (max-width: 480px) {
@@ -902,4 +907,5 @@ html.dark-theme .footer-bottom p {
 main ul, main ol {
     padding-left: 2rem;
     margin-left: 0;
+    list-style-type: disc;
 } 
